# playground.c

./: .gitignore  .pre-commit-config.yaml
DA/DA-0/: da_0.h  test_0.c
DA/DA-1/: da_1.h  test_1.c
DS/: CMakeLists.txt
DS/cmake/: gtest.cmake
DS/include/: stack.h
DS/include/DS/: stack.h  string.h
DS/src/: main.cpp
FP/FP-0/: FP_0.c  FP_0.h
FP/FP-1/: FP_1.c  FP_1.h
MX/: matmul.cc  matmul.h  test.cc
unique/: unique.c
